[gd_scene load_steps=4 format=3 uid="uid://8c1ldpsd4xws"]

[ext_resource type="Script" path="res://Scripts/multitrack_music_demo.gd" id="1_bbv0o"]
[ext_resource type="AudioStream" uid="uid://dmqunx31c12y3" path="res://Sounds/Golden (Instrumental).mp3" id="2_6ci5s"]
[ext_resource type="AudioStream" uid="uid://bi2wn73lo70ha" path="res://Sounds/Golden (Acapella).mp3" id="3_t6y5q"]

[node name="MultitrackMusicDemo" type="Control" node_paths=PackedStringArray("bgm_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bbv0o")
tracks = Array[AudioStream]([ExtResource("2_6ci5s"), ExtResource("3_t6y5q")])
bgm_label = NodePath("Container/HBoxContainer/Container/Label")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -20.0
offset_right = 250.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Container" type="VBoxContainer" parent="Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Container/HBoxContainer/Container"]
layout_mode = 2
text = "BGM: 100"

[node name="BGM" type="HSlider" parent="Container/HBoxContainer/Container"]
layout_mode = 2
value = 100.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayAll" type="Button" parent="Container/HBoxContainer2"]
layout_mode = 2
text = "Play All"

[node name="PauseAll" type="Button" parent="Container/HBoxContainer2"]
layout_mode = 2
text = "Pause All"

[node name="ContinueAll" type="Button" parent="Container/HBoxContainer2"]
layout_mode = 2
text = "Continue All"

[node name="StopAll" type="Button" parent="Container/HBoxContainer2"]
layout_mode = 2
text = "Stop All"

[connection signal="value_changed" from="Container/HBoxContainer/Container/BGM" to="." method="_on_bgm_value_changed"]
[connection signal="pressed" from="Container/HBoxContainer2/PlayAll" to="." method="_on_play_all_pressed"]
[connection signal="pressed" from="Container/HBoxContainer2/PauseAll" to="." method="_on_pause_all_pressed"]
[connection signal="pressed" from="Container/HBoxContainer2/ContinueAll" to="." method="_on_continue_all_pressed"]
[connection signal="pressed" from="Container/HBoxContainer2/StopAll" to="." method="_on_stop_all_pressed"]
